# q1ss

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  README.rst  autodoc_typehints.py  pyproject.toml  run-black.bat  run-tests.bat  setup.cfg  tox.ini
docs/: api-toc.rst  autodoc-type-aliases.json  conf.py  getting-started.rst  index.rst  make-api.json  requirements.txt
docs/api/: q1ss.ap.base.rst  q1ss.ap.explicit.rst  q1ss.ap.generated.rst  q1ss.ap.rst  q1ss.ap.sequence.rst  q1ss.ap.vectorized.rst  q1ss.binalg.affine.rst  q1ss.binalg.base.rst  q1ss.binalg.binmat.rst  q1ss.binalg.binvec.rst  q1ss.binalg.rst  q1ss.binalg.vectorized.rst  q1ss.rst  q1ss.utils.options.rst  q1ss.utils.rst
docs/intersphinx/: optmanage-objects.inv  typed-descriptors-objects.inv
notebooks/: AffinePartitions.ipynb
q1ss/: __init__.py
q1ss/ap/: __init__.py  base.py  explicit.py  generated.py  sequence.py  vectorized.py
q1ss/binalg/: __init__.py  affine.py  base.py  binmat.py  binvec.py  vectorized.py
q1ss/utils/: __init__.py  options.py
test/: test_00_binvec.py  test_01_binmat.py  test_02_affine.py  test_03_partition.py
